--- a/playground.ipynb
+++ b/playground.ipynb
@@ -1119,11 +1119,38 @@
     "a2 = a.repeat((1,2,1))[:,ind,:]\n",
     "b2 = b.repeat((3,1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "a = torch.tensor(np.arange(-10,5))\n",
+    "print((a > 0).type(torch.int32).sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('fyp')",
+   "display_name": "iKYC",
    "language": "python",
    "name": "python3"
   },
@@ -1137,12 +1164,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.11 (default, Aug  6 2021, 08:56:27) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6df37f7eefd70c111a3ab674c48367e1dbb3353c370b3077e2dd29dc159cc18f"
+    "hash": "5963f472496cc48255043cf410147cee5da387b6f85165d99c9d723734b19a4a"
    }
   }
  },
