add comment on get_dict

--- a/dataset/padding_segementation_test.ipynb
+++ b/dataset/padding_segementation_test.ipynb
@@ -116,16 +116,21 @@
     "# \n",
     "def get_dict():\n",
     "    d = load_lvis_json(\"lvis_v1_small_cocofied.json\",\"\")\n",
+    "    # len of segmentation\n",
     "    _max_element_in_segmentation = 1500\n",
+    "    # num of segmentation\n",
     "    _max_segmentation = 50\n",
     "    for i in range(len(d)): \n",
     "        for j in range(len(d[i]['annotations'])):\n",
+    "            # make len of segmentation the same\n",
+    "            # num of segmentation in a anno\n",
     "            for k in range(len(d[i]['annotations'][j]['segmentation'])):\n",
     "                # print(i,j,k)\n",
     "                segmentation = torch.tensor(copy.deepcopy(d[i]['annotations'][j]['segmentation'][k]))\n",
     "                # print(segmentation.shape)\n",
     "                new_segmentation = clip_or_pad_to_fixed_size_pytorch(segmentation,_max_element_in_segmentation,-1)\n",
     "                d[i]['annotations'][j]['segmentation'][k] = torch.round(new_segmentation,decimals=2).tolist()      \n",
+    "            # padding the segmentation\n",
     "            segmentation_set = torch.tensor(copy.deepcopy(d[i]['annotations'][j]['segmentation']))\n",
     "            new_segmentation_set = clip_or_pad_to_fixed_size_pytorch(segmentation_set,_max_segmentation,-1)\n",
     "            d[i]['annotations'][j]['segmentation'] = torch.round(new_segmentation_set,decimals=2).tolist()\n",
